Add Arabic i18n support to privacy.html with data-i18n attributes

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -591,11 +591,12 @@
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
                 </svg>
-                Your Data is Protected
+                <span data-i18n="hero.protected">Your Data is Protected</span>
             </div>
-            <h1>Privacy Policy</h1>
-            <p class="hero-arabic">سياسة الخصوصية</p>
-            <p class="hero-date">Last updated: January 31, 2026 | آخر تحديث: 31 يناير 2026</p>
+            <h1 data-i18n="privacy.title">Privacy Policy</h1>
+            <p class="hero-arabic" data-i18n="privacy.titleAr">سياسة الخصوصية</p>
+            <p class="hero-date" data-i18n="privacy.lastUpdated">Last updated: January 31, 2026 | آخر تحديث: 31 يناير
+                2026</p>
         </div>
     </section>
 
@@ -605,8 +606,9 @@
 
             <!-- Summary Card -->
             <div class="summary-card">
-                <h2>🔒 Your Privacy is Our Priority</h2>
-                <p>This Privacy Policy explains how QScrap Services & Trading L.L.C ("QScrap", "we", "us", or "our")
+                <h2 data-i18n="privacy.summary.title">🔒 Your Privacy is Our Priority</h2>
+                <p data-i18n="privacy.summary.text">This Privacy Policy explains how QScrap Services & Trading L.L.C
+                    ("QScrap", "we", "us", or "our")
                     collects, uses, shares, and protects your personal information when you use our mobile applications
                     and services. We are committed to transparency and compliance with Qatar's Law No. 13 of 2016 on
                     Personal Data Protection.</p>
@@ -882,12 +884,13 @@
 
             <!-- Company Contact Card -->
             <div class="company-card">
-                <h2>📞 Contact Us</h2>
+                <h2 data-i18n="privacy.contact.title">📞 Contact Us</h2>
                 <div class="company-grid">
                     <div class="company-item">
                         <div class="company-icon">📧</div>
                         <div>
-                            <div class="company-item-label">Data Protection Officer</div>
+                            <div class="company-item-label" data-i18n="privacy.contact.dpo">Data Protection Officer
+                            </div>
                             <div class="company-item-value"><a href="mailto:privacy@qscrap.qa">privacy@qscrap.qa</a>
                             </div>
                         </div>
@@ -895,7 +898,7 @@
                     <div class="company-item">
                         <div class="company-icon">💬</div>
                         <div>
-                            <div class="company-item-label">General Support</div>
+                            <div class="company-item-label" data-i18n="privacy.contact.general">General Support</div>
                             <div class="company-item-value"><a href="mailto:support@qscrap.qa">support@qscrap.qa</a>
                             </div>
                         </div>
@@ -904,7 +907,8 @@
                         <div class="company-icon">📞</div>
                         <div>
                             <div class="company-item-label">Phone</div>
-                            <div class="company-item-value"><a href="tel:+97444554444">+974 4455 4444</a></div>
+                            <div class="company-item-value"><a href="tel:+97444554444" dir="ltr">+974 4455 4444</a>
+                            </div>
                         </div>
                     </div>
                     <div class="company-item">
@@ -917,9 +921,12 @@
                     </div>
                 </div>
                 <div class="company-legal">
-                    <div class="company-legal-name">QScrap Services & Trading L.L.C</div>
-                    <div class="company-legal-arabic">كيوسكراب للخدمات والتجارة ذ.م.م</div>
-                    <div class="company-cr">Commercial Registration: 155892 | State of Qatar</div>
+                    <div class="company-legal-name" data-i18n="refund.contact.company">QScrap Services & Trading L.L.C
+                    </div>
+                    <div class="company-legal-arabic" data-i18n="refund.contact.companyAr">كيوسكراب للخدمات والتجارة
+                        ذ.م.م</div>
+                    <div class="company-cr" data-i18n="refund.contact.cr">Commercial Registration: 155892 | State of
+                        Qatar</div>
                 </div>
             </div>
 
