Add RTL nav-container flip to about.html for consistent logo/menu flip in Arabic mode

--- a/public/about.html
+++ b/public/about.html
@@ -1067,6 +1067,10 @@
             font-family: 'Inter', 'Noto Sans Arabic', 'Segoe UI', Tahoma, sans-serif;
         }
 
+        [dir="rtl"] .nav-container {
+            flex-direction: row-reverse;
+        }
+
         [dir="rtl"] .nav-links {
             flex-direction: row-reverse;
         }
