Fix RTL navigation: remove row-reverse since dir=rtl naturally reverses flex items

--- a/public/about.html
+++ b/public/about.html
@@ -1068,7 +1068,7 @@
         }
 
         [dir="rtl"] .nav-container {
-            flex-direction: row-reverse;
+            /* RTL direction naturally reverses flex items */
         }
 
         [dir="rtl"] .nav-links {
