--- a/public/privacy.html
+++ b/public/privacy.html
@@ -531,7 +531,7 @@
         }
 
         [dir="rtl"] .nav-container {
-            flex-direction: row-reverse;
+            /* RTL direction naturally reverses flex items */
         }
 
         [dir="rtl"] .section-header {
