--- a/public/terms.html
+++ b/public/terms.html
@@ -509,7 +509,7 @@
         }
 
         [dir="rtl"] .nav-container {
-            flex-direction: row-reverse;
+            /* RTL direction naturally reverses flex items */
         }
 
         [dir="rtl"] .section-header {
