--- a/public/refund.html
+++ b/public/refund.html
@@ -583,7 +583,7 @@
         }
 
         [dir="rtl"] .nav-container {
-            flex-direction: row-reverse;
+            /* RTL direction naturally reverses flex items */
         }
 
         [dir="rtl"] .section-header {
