Fix RTL section header layout - section numbers on RIGHT - Enhance RTL CSS for .section-header in privacy, terms, refund pages - Add justify-content: flex-start and text-align: right - Add .section-title text-align: right for RTL mode

--- a/public/refund.html
+++ b/public/refund.html
@@ -588,6 +588,12 @@
 
         [dir="rtl"] .section-header {
             flex-direction: row-reverse;
+            justify-content: flex-start;
+            text-align: right;
+        }
+
+        [dir="rtl"] .section-title {
+            text-align: right;
         }
 
         [dir="rtl"] .company-grid {
