Fix RTL double-reversal - use CSS order property - Place section numbers on RIGHT in Arabic mode using order:2 - Remove row-reverse which caused double-reversal with dir=rtl - Applied to privacy.html, terms.html, refund.html

--- a/public/terms.html
+++ b/public/terms.html
@@ -513,12 +513,18 @@
         }
 
         [dir="rtl"] .section-header {
-            flex-direction: row-reverse;
+            /* Don't use row-reverse with RTL - causes double reversal */
+            flex-direction: row;
             justify-content: flex-start;
-            text-align: right;
         }
 
-        [dir="rtl"] .section-title {
+        [dir="rtl"] .section-header .section-number {
+            order: 2;
+            /* Place number on right in RTL */
+        }
+
+        [dir="rtl"] .section-header .section-title {
+            order: 1;
             text-align: right;
         }
 
