--- a/public/privacy.html
+++ b/public/privacy.html
@@ -535,18 +535,12 @@
         }
 
         [dir="rtl"] .section-header {
-            /* Don't use row-reverse with RTL - causes double reversal */
-            flex-direction: row;
-            justify-content: flex-start;
-        }
-
-        [dir="rtl"] .section-header .section-number {
-            order: 2;
-            /* Place number on right in RTL */
+            /* Align header content to extreme RIGHT in RTL mode */
+            flex-direction: row-reverse;
+            justify-content: flex-end;
         }
 
         [dir="rtl"] .section-header .section-title {
-            order: 1;
             text-align: right;
         }
 
@@ -670,7 +664,7 @@
             <!-- Section 1 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">1</div>
+                    <div class="section-number" data-i18n="privacy.s1.num">1</div>
                     <h2 class="section-title" data-i18n="privacy.s1.title">Introduction & Scope</h2>
                 </div>
                 <p data-i18n="privacy.s1.p1">QScrap Services & Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م is a
@@ -694,7 +688,7 @@
             <!-- Section 2 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">2</div>
+                    <div class="section-number" data-i18n="privacy.s2.num">2</div>
                     <h2 class="section-title" data-i18n="privacy.s2.title">Information We Collect</h2>
                 </div>
 
@@ -757,7 +751,7 @@
             <!-- Section 3 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">3</div>
+                    <div class="section-number" data-i18n="privacy.s3.num">3</div>
                     <h2 class="section-title" data-i18n="privacy.s3.title">How We Use Your Information</h2>
                 </div>
 
@@ -792,7 +786,7 @@
             <!-- Section 4 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">4</div>
+                    <div class="section-number" data-i18n="privacy.s4.num">4</div>
                     <h2 class="section-title" data-i18n="privacy.s4.title">Data Sharing & Disclosure</h2>
                 </div>
                 <p data-i18n="privacy.s4.intro">We may share your information with:</p>
@@ -835,7 +829,7 @@
             <!-- Section 5 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">5</div>
+                    <div class="section-number" data-i18n="privacy.s5.num">5</div>
                     <h2 class="section-title" data-i18n="privacy.s5.title">Data Security</h2>
                 </div>
                 <p data-i18n="privacy.s5.intro">We implement industry-standard security measures to protect your data:
@@ -862,7 +856,7 @@
             <!-- Section 6 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">6</div>
+                    <div class="section-number" data-i18n="privacy.s6.num">6</div>
                     <h2 class="section-title" data-i18n="privacy.s6.title">Data Retention</h2>
                 </div>
                 <p data-i18n="privacy.s6.intro">We retain your personal information for as long as necessary to:</p>
@@ -881,7 +875,7 @@
             <!-- Section 7 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">7</div>
+                    <div class="section-number" data-i18n="privacy.s7.num">7</div>
                     <h2 class="section-title" data-i18n="privacy.s7.title">Your Rights</h2>
                 </div>
                 <p data-i18n="privacy.s7.intro">Under Qatar's data protection laws and our policies, you have the right
@@ -909,7 +903,7 @@
             <!-- Section 8 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">8</div>
+                    <div class="section-number" data-i18n="privacy.s8.num">8</div>
                     <h2 class="section-title" data-i18n="privacy.s8.title">Account Deletion</h2>
                 </div>
                 <p data-i18n="privacy.s8.intro">You may request account deletion through the app or by contacting us.
@@ -927,7 +921,7 @@
             <!-- Section 9 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">9</div>
+                    <div class="section-number" data-i18n="privacy.s9.num">9</div>
                     <h2 class="section-title" data-i18n="privacy.s9.title">Children's Privacy</h2>
                 </div>
                 <p data-i18n="privacy.s9.text">Our Apps are not intended for users under 18 years of age. We do not
@@ -939,7 +933,7 @@
             <!-- Section 10 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">10</div>
+                    <div class="section-number" data-i18n="privacy.s10.num">10</div>
                     <h2 class="section-title" data-i18n="privacy.s10.title">Third-Party Links</h2>
                 </div>
                 <p data-i18n="privacy.s10.text">Our Apps may contain links to third-party websites or services. We are
@@ -951,7 +945,7 @@
             <!-- Section 11 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">11</div>
+                    <div class="section-number" data-i18n="privacy.s11.num">11</div>
                     <h2 class="section-title" data-i18n="privacy.s11.title">International Data Transfers</h2>
                 </div>
                 <p data-i18n="privacy.s11.text">Your information may be transferred to and processed on servers located
@@ -963,7 +957,7 @@
             <!-- Section 12 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">12</div>
+                    <div class="section-number" data-i18n="privacy.s12.num">12</div>
                     <h2 class="section-title" data-i18n="privacy.s12.title">Changes to This Policy</h2>
                 </div>
                 <p data-i18n="privacy.s12.intro">We may update this Privacy Policy periodically. We will notify you of
@@ -981,7 +975,7 @@
             <!-- Section 13 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">13</div>
+                    <div class="section-number" data-i18n="privacy.s13.num">13</div>
                     <h2 class="section-title" data-i18n="privacy.s13.title">Governing Law</h2>
                 </div>
                 <p data-i18n="privacy.s13.text">This Privacy Policy is governed by the laws of the State of Qatar,
